--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,9 @@ dependencies:
   cupertino_icons: ^0.1.3
   firebase_core: ^0.5.0
   cloud_firestore: ^0.14.0+2
-  firebase_auth: ^0.18.0+1
+  firebase_auth: ^0.16.1
   uuid: ^2.2.0
+
 
 dev_dependencies:
   flutter_test:
