--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,9 @@ dependencies:
   firebase_core: ^0.5.0
   cloud_firestore: ^0.14.0+2
   firebase_auth: ^0.18.0+1
+  file_picker: ^1.12.0
+  path_provider: ^1.6.11
+  firebase_storage: ^4.0.0
   uuid: ^2.2.0
 
 
