--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,13 @@ dependencies:
   cloud_firestore: ^0.14.0+2
   firebase_auth: ^0.18.0+1
   uuid: ^2.2.0
-
+  firebase_storage: ^4.0.0
+  path_provider: ^1.6.11
+  file_picker: ^1.12.0
+  material_design_icons_flutter: ^4.0.5345
+  url_launcher: ^5.5.0
+  flutter_email_sender: ^3.0.1
+  flutter_open_whatsapp: ^0.1.2
 
 dev_dependencies:
   flutter_test:
