--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,8 @@ dependencies:
   flutter_email_sender: ^3.0.1
   flutter_open_whatsapp: ^0.1.2
   geolocator: ^5.3.2+2
+  mailer: ^3.0.4
+  twilio_flutter: ^0.0.5
 
 dev_dependencies:
   flutter_test:
