--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,7 @@ dependencies:
   flutter_open_whatsapp: ^0.1.2
   geolocator: ^5.3.2+2
   mailer: ^3.0.4
+  image_cropper : ^1.2.0
   twilio_flutter: ^0.0.5
   razorpay_flutter: 1.1.0
 
