--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,7 @@ dependencies:
   firebase_auth: ^0.18.0+1
   file_picker: ^1.12.0
   path_provider: ^1.6.11
+  cached_network_image: ^2.3.1
   firebase_storage: ^4.0.0
   uuid: ^2.2.0
   material_design_icons_flutter: ^4.0.5345
